# xcodeproj_min_version_error

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  versions.bzl
BazelSample/: BUILD.bazel
BazelSample.xcodeproj/: project.pbxproj
BazelSample.xcodeproj/rules_xcodeproj/: generated.xcfilelist
BazelSample.xcodeproj/rules_xcodeproj/bazel/: Debug-swift_debug_settings.py  bazel_build.sh
BazelSample.xcodeproj/xcshareddata/xcschemes/: BazelSample.xcscheme  CocktailDB.xcscheme  CocktailDBInterface.xcscheme  CocktailDBTests.xcscheme  CommonUI.xcscheme  DrinkData.xcscheme  DrinkDetails.xcscheme  DrinkDetailsInterface.xcscheme  DrinkDiscovery.xcscheme  DrinkDiscoveryInterface.xcscheme  DrinkDomain.xcscheme  NetworkInterface.xcscheme  Networking.xcscheme
BazelSample/Main/Resources/: Info.plist
BazelSample/Main/Resources/Assets/AppIcon.xcassets/AppIcon.appiconset/: Contents.json
BazelSample/Main/Sources/: AppDelegate+RootComponent.swift  AppDelegate.swift  RootViewController.swift
Libs/KeychainAccess/: BUILD.bazel
Libs/KeychainAccess/KeychainAccess.xcframework/: Info.plist
Libs/KeychainAccess/KeychainAccess.xcframework/ios-arm64/KeychainAccess.framework/: Info.plist  KeychainAccess
Libs/KeychainAccess/KeychainAccess.xcframework/ios-arm64/KeychainAccess.framework/Headers/: KeychainAccess-Swift.h
Libs/KeychainAccess/KeychainAccess.xcframework/ios-arm64/KeychainAccess.framework/Modules/KeychainAccess.swiftmodule/: arm64-apple-ios.swiftdoc  arm64-apple-ios.swiftmodule
Libs/KeychainAccess/KeychainAccess.xcframework/ios-arm64/KeychainAccess.framework/Modules/KeychainAccess.swiftmodule/Project/: arm64-apple-ios.swiftsourceinfo
Libs/KeychainAccess/KeychainAccess.xcframework/ios-arm64_x86_64-simulator/KeychainAccess.framework/: Info.plist  KeychainAccess
Libs/KeychainAccess/KeychainAccess.xcframework/ios-arm64_x86_64-simulator/KeychainAccess.framework/Headers/: KeychainAccess-Swift.h
Libs/KeychainAccess/KeychainAccess.xcframework/ios-arm64_x86_64-simulator/KeychainAccess.framework/Modules/KeychainAccess.swiftmodule/: arm64-apple-ios-simulator.swiftdoc  arm64-apple-ios-simulator.swiftmodule  x86_64-apple-ios-simulator.swiftdoc  x86_64-apple-ios-simulator.swiftmodule
Libs/KeychainAccess/KeychainAccess.xcframework/ios-arm64_x86_64-simulator/KeychainAccess.framework/Modules/KeychainAccess.swiftmodule/Project/: arm64-apple-ios-simulator.swiftsourceinfo  x86_64-apple-ios-simulator.swiftsourceinfo
Libs/KeychainAccess/KeychainAccess.xcframework/ios-arm64_x86_64-simulator/KeychainAccess.framework/_CodeSignature/: CodeResources
Modules/CocktailDB/: BUILD.bazel
Modules/CocktailDB/Sources/: CocktailDB.swift
Modules/CocktailDB/Tests/Sources/: CocktailDBTests.swift
Modules/CocktailDBInterface/: BUILD.bazel
Modules/CocktailDBInterface/Sources/: CocktailDBClient.swift  Info.plist
Modules/CocktailDBInterface/Tests/Utils/: CocktailDBClientSpy.swift
Modules/CommonUI/: BUILD.bazel
Modules/CommonUI/Resources/LottieJsons/: loading-state.json
Modules/CommonUI/Resources/Strings/pt-BR.lproj/: CommonUILocalizable.strings
Modules/CommonUI/Sources/: AlphaAnimation.swift  EmptyState.swift  GreatButton.swift  LoadingView.swift  StatefulView.swift
Modules/DrinkData/: BUILD.bazel
Modules/DrinkData/Sources/: CocktailRepository.swift
Modules/DrinkDetails/: BUILD.bazel  Info.plist
Modules/DrinkDetails/Resources/Assets/Assets.xcassets/cheers.imageset/: Contents.json
Modules/DrinkDetails/Resources/Strings/pt-BR.lproj/: DrinkDetailsLocalizable.strings
Modules/DrinkDetails/Sources/: DrinkDetailsInteractor.swift  DrinkDetailsPresenter.swift  DrinkDetailsRouter.swift  DrinkDetailsView.swift  DrinkDetailsViewController.swift
Modules/DrinkDetailsInterface/: BUILD.bazel
Modules/DrinkDetailsInterface/Sources/: DrinkDetailsScene.swift
Modules/DrinkDiscovery/: BUILD.bazel
Modules/DrinkDiscovery/Sources/: DrinkDiscoveryInteractor.swift  DrinkDiscoveryPresenter.swift  DrinkDiscoveryRouter.swift  DrinkDiscoveryTableViewCell.swift  DrinkDiscoveryView.swift  DrinkDiscoveryViewController.swift
Modules/DrinkDiscovery/Tests/Sources/: DrinkDiscoveryViewControllerTests.swift
Modules/DrinkDiscoveryInterface/: BUILD.bazel
Modules/DrinkDiscoveryInterface/Sources/: DrinkDiscoveryScene.swift
Modules/DrinkDomain/: BUILD.bazel
Modules/DrinkDomain/Sources/: Drink.swift  DrinkRepositories.swift  DrinkUseCases.swift
Modules/DrinkDomain/Sources/UseCases/: GetAlcoholDrinkPreviews.swift  GetDrink.swift
Modules/DrinkDomain/Tests/Sources/: GetAlcoholDrinkPreviewsTests.swift  GetDrinkTests.swift
Modules/DrinkDomain/Tests/Sources/Doubles/: CocktailRepositorySpy.swift
Modules/NetworkInterface/: BUILD.bazel
Modules/NetworkInterface/Sources/: NetworkResponseSerializing.swift  Networking.swift
Modules/Networking/: BUILD.bazel
Modules/Networking/Sources/: Network.swift
Modules/ObjcModule/: BUILD.bazel
Modules/ObjcModule/Sources/Manager/: LabelManager.h  LabelManager.m
Modules/ObjcModule/Sources/ViewControllers/: ObjcModuleViewController.h  ObjcModuleViewController.m
Modules/ObjcModule/Sources/Views/: LabelView.swift
