load("@build_bazel_rules_apple//apple/testing/default_runner:ios_xctestrun_runner.bzl", "ios_xctestrun_runner")
load("@rules_xcodeproj//xcodeproj:defs.bzl", "xcodeproj")

xcodeproj(
    name = "BazelSampleXcodeProj",
    build_mode = "bazel",
    default_xcode_configuration = "Debug",
    focused_targets = [
        "//BazelSample:BazelSampleApp",
        "//BazelSample:BazelSample",
        "//Modules/CocktailDB",
        "//Modules/CocktailDB:CocktailDB.library",
        "//Modules/CocktailDB:CocktailDBTests",
        "//Modules/CocktailDB:CocktailDBTests.library",
    ],
    generation_mode = "incremental",
    minimum_xcode_version = "15.4.0",
    project_name = "BazelSample",
    tags = ["manual"],
    top_level_targets = [
        "//BazelSample:BazelSampleApp",
        "//Modules/CocktailDB",
        "//Modules/CocktailDBInterface",
        "//Modules/DrinkData",
        "//Modules/DrinkDetails",
        "//Modules/DrinkDetailsInterface",
        "//Modules/DrinkDiscovery",
        "//Modules/DrinkDomain",
        "//Modules/NetworkInterface",
        "//Modules/Networking",
        "//Modules/CocktailDB:CocktailDBTests",
    ],
    xcode_configurations = {
        "Debug": {
            "//command_line_option:compilation_mode": "dbg",
        },
    },
)

ios_xctestrun_runner(
    name = "default_xctestrun_runner",
    command_line_args = [
        "-AppleLanguages",
        "en",
    ],
    device_type = "iPhone 15",
    random = True,
    reuse_simulator = True,
    visibility = ["//visibility:public"],
    xcodebuild_args = [],
)
