load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_apple//apple:versioning.bzl", "apple_bundle_version")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//:versions.bzl", "MINIMUM_OS_VERSION")

ios_application(
    name = "BazelSampleApp",
    app_icons = glob(["Main/Resources/Assets/AppIcon.xcassets/**/*"]),
    bundle_id = "com.test.bazelsample",
    bundle_name = "BazelSample",
    families = [
        "iphone",
    ],
    infoplists = ["Main/Resources/Info.plist"],
    minimum_os_version = MINIMUM_OS_VERSION,
    version = ":BazelSampleVersion",
    visibility = ["//visibility:public"],
    deps = [":BazelSample"],
)

apple_bundle_version(
    name = "BazelSampleVersion",
    build_version = "1.0",
    short_version_string = "1.0",
    tags = ["manual"],
)

swift_library(
    name = "BazelSample",
    srcs = glob(["Main/Sources/**/*.swift"]),
    module_name = "BazelSample",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Modules/CocktailDB:CocktailDB.library",
        "//Modules/CocktailDBInterface:CocktailDBInterface.library",
        "//Modules/DrinkData:DrinkData.library",
        "//Modules/DrinkDetails:DrinkDetails.library",
        "//Modules/DrinkDetailsInterface:DrinkDetailsInterface.library",
        "//Modules/DrinkDiscovery:DrinkDiscovery.library",
        "//Modules/DrinkDomain:DrinkDomain.library",
        "//Modules/NetworkInterface:NetworkInterface.library",
        "//Modules/Networking:Networking.library",
        "//Modules/ObjcModule:ObjcModule.library",
    ],
)
