load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")
load("//:versions.bzl", "MINIMUM_OS_VERSION")

ios_framework(
    name = "CommonUI",
    bundle_id = "com.lucasromanorm.CommonUI",
    families = ["iphone"],
    infoplists = ["Info.plist"],
    minimum_os_version = MINIMUM_OS_VERSION,
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":CommonUI.library"],
)

swift_library(
    name = "CommonUI.library",
    srcs = glob(["Sources/**/*.swift"]),
    data = glob(["Resources/**"]),
    module_name = "CommonUI",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
