load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "DrinkData.library",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "DrinkData",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Modules/CocktailDBInterface:CocktailDBInterface.library",
        "//Modules/DrinkDomain:DrinkDomain.library",
    ],
)
