load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")
load("//:versions.bzl", "MINIMUM_OS_VERSION")

ios_framework(
    name = "DrinkData",
    bundle_id = "com.lucasromanorm.DrinkData",
    families = ["iphone"],
    frameworks = [
        "//Modules/CocktailDBInterface",
        "//Modules/DrinkDomain",
    ],
    infoplists = ["Sources/Info.plist"],
    minimum_os_version = MINIMUM_OS_VERSION,
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":DrinkData.library"],
)

swift_library(
    name = "DrinkData.library",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "DrinkData",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Modules/CocktailDBInterface:CocktailDBInterface.library",
        "//Modules/DrinkDomain:DrinkDomain.library",
    ],
)
