load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "DrinkDetails.library",
    srcs = glob(["Sources/**/*.swift"]),
    data = glob(["Resources/**"]),
    module_name = "DrinkDetails",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Modules/CommonUI:CommonUI.library",
        "//Modules/DrinkDetailsInterface:DrinkDetailsInterface.library",
    ],
)
