load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")
load("//:versions.bzl", "MINIMUM_OS_VERSION")

ios_framework(
    name = "DrinkDetails",
    bundle_id = "com.lucasromanorm.DrinkDetails",
    families = ["iphone"],
    frameworks = [
        "//Modules/CommonUI",
        "//Modules/DrinkDetailsInterface",
    ],
    infoplists = ["Info.plist"],
    minimum_os_version = MINIMUM_OS_VERSION,
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":DrinkDetails.library"],
)

swift_library(
    name = "DrinkDetails.library",
    srcs = glob(["Sources/**/*.swift"]),
    data = glob(["Resources/**"]),
    module_name = "DrinkDetails",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Modules/CommonUI:CommonUI.library",
        "//Modules/DrinkDetailsInterface:DrinkDetailsInterface.library",
    ],
)
