load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")
load("//:versions.bzl", "MINIMUM_OS_VERSION")

ios_framework(
    name = "DrinkDetailsInterface",
    bundle_id = "com.lucasromanorm.DrinkDetailsInterface",
    families = ["iphone"],
    frameworks = [
        "//Modules/DrinkDomain",
    ],
    infoplists = ["Sources/Info.plist"],
    minimum_os_version = MINIMUM_OS_VERSION,
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":DrinkDetailsInterface.library"],
)

swift_library(
    name = "DrinkDetailsInterface.library",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "DrinkDetailsInterface",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Modules/DrinkDomain:DrinkDomain.library",
    ],
)
