load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "DrinkDiscovery.library",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "DrinkDiscovery",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Modules/CommonUI:CommonUI.library",
        "//Modules/DrinkDetailsInterface:DrinkDetailsInterface.library",
        "//Modules/DrinkDiscoveryInterface:DrinkDiscoveryInterface.library",
    ],
)
