load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "DrinkDiscoveryInterface.library",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "DrinkDiscoveryInterface",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Modules/DrinkDomain:DrinkDomain.library",
    ],
)
