load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")
load("//:versions.bzl", "MINIMUM_OS_VERSION")

ios_framework(
    name = "NetworkInterface",
    bundle_id = "com.lucasromanorm.NetworkInterface",
    families = ["iphone"],
    infoplists = ["Sources/Info.plist"],
    minimum_os_version = MINIMUM_OS_VERSION,
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":NetworkInterface.library"],
)

swift_library(
    name = "NetworkInterface.library",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "NetworkInterface",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
