load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Networking.library",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "Networking",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Modules/NetworkInterface:NetworkInterface.library",
    ],
)
