load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")
load("//:versions.bzl", "MINIMUM_OS_VERSION")

ios_framework(
    name = "Networking",
    bundle_id = "com.lucasromanorm.Networking",
    families = ["iphone"],
    frameworks = [
        "//Modules/NetworkInterface",
    ],
    infoplists = ["Sources/Info.plist"],
    minimum_os_version = MINIMUM_OS_VERSION,
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":Networking.library"],
)

swift_library(
    name = "Networking.library",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "Networking",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Modules/NetworkInterface:NetworkInterface.library",
    ],
)
